--- a/app/todo-app/public/index.html
+++ b/app/todo-app/public/index.html
@@ -9,12 +9,12 @@
 
   <ng-include src="'templates/navbar.html'"></ng-include>
 
-  <h1>My TODOs!</h1>
+  <h1>FSJS Syllabus Checklist</h1>
 
   <div class="list" ng-controller="mainCtrl">
     <div class="add">
       <a href="#" ng-click="addTodo()">
-        + Add a New Task</a>
+        + Add a New Objective</a>
       </div>
     <todo></todo>
    </div>
