Adding comments & experimenting with styling

--- a/app/home-nav-page/about.html
+++ b/app/home-nav-page/about.html
@@ -27,13 +27,14 @@
       <section>   
        <img src="img/jenv.jpg" alt="Photograph of Jennifer Varahala" class= "profile-photo"> 
        <h3>About</h3>
-       <p>Hi, I'm Jennifer Varahala! This is my career portfolio where I have created an interactive FSJS Course Syllabus To-Do List. It will tract where you are at in your syllabus, show which week you should be on, and display your timeframe in hours to completion (approximately).
+       <p>Hi, I'm Jennifer Varahala! This is my career portfolio where I have created an interactive FSJS Course Syllabus To-Do List. It will tract where you are at in your syllabus. There are links to the online syllabus, slack and Code Louisville social media links for you to follow.
        </p>
         <p>If you'd like to follow CodeLouisville on Twitter, their username is <a href="https://twitter.com/codelouisville"> @codelouisville</a></p>
       </section>
       <footer>
         <a href="https://twitter.com/codelouisville"><img src="img/twitter-wrap.png" alt="Twitter Logo" class="social-icon"                                                 ></a>
-        <a href="https://www.facebook.com/codelouisville/"></a><img src="img/facebook-wrap.png" alt="Facebook Logo" class="social-icon">
+        <a href="https://www.facebook.com/codelouisville/"><img src="img/facebook-wrap.png" alt="Facebook Logo" class="social-icon"></a>
+
         <p>&copy; 2016 Jennifer Varahala.</p>
       </footer>
     </div> 
