--- a/app/home-nav-page/contact.html
+++ b/app/home-nav-page/contact.html
@@ -27,7 +27,9 @@
       <section id="primary">   
         <h3> General Information</h3>
         <p>I am available for hire as a junior web developer. Please contact me if you want to know more.</p>
-        <p>Placeholder</p>
+
+        <!-- <p>Placeholder</p> -->
+
       </section>
       <section id="secondary">
       <h3> Contact Details</h3>
@@ -38,8 +40,10 @@
       </ul>
       </section>
       <footer>
-        <a href="https://twitter.com/codelouisville"><img src="img/twitter-wrap.png" alt="Twitter Logo" class="social-icon"                                                 ></a>
-        <a href="https://www.facebook.com/codelouisville/"><img src="img/facebook-wrap.png" alt="Facebook Logo" class="social-icon" ></a>
+        <a href="https://twitter.com/codelouisville"><img src="img/twitter-wrap.png" alt="Twitter Logo" class="social-icon"></a>
+
+        <a href="https://www.facebook.com/codelouisville/"><img src="img/facebook-wrap.png" alt="Facebook Logo" class="social-icon"></a>
+
         <p>&copy; 2016 Jennifer Varahala.</p>
       </footer>
     </div> 
