--- a/app/home-nav-page/index.html
+++ b/app/home-nav-page/index.html
@@ -32,7 +32,7 @@
       <section> 
         <ul id="gallery">
           <li>
-            <a href= "https://github.com/CodeLouisville/Student-Resources/wiki/FSJS-Syllabus" target="_blank">
+            <a href="https://github.com/CodeLouisville/Student-Resources/wiki/FSJS-Syllabus" target="_blank">
               <img src="img/syllabus.jpg" alt="">
               <!-- <p>Will link to FSJS Syllabus.</p> -->
               </a>
@@ -43,29 +43,34 @@
               <!-- <p>Will link to interactive To-Do List.</p> -->
               </a>
           </li>
-          // Placeholders if I have time to enhance project
           <li>
-            <a href="img/sandClock.jpg">
-              <img src="img/sandClock.jpg" alt="">
-              <p>May link to timer.</p></a>
-          </li>
-          <li>
-            <a href= "img/codeChallenge.jpg" target="_blank">
-              <img src="https://github.com/CodeLouisville/FSJS-Weekly-Challenges" alt="">
+            <a href="https://github.com/CodeLouisville/FSJS-Weekly-Challenges" target="_blank">
+              <img src="img/codeChallenge.jpg " alt="">
               <!-- <p>Links to FSJS Weekly Challenges</p> -->
               </a>
           </li>
-          <li>
+
+          <!--  Placeholders for future development -->
+          <!--           <li>
+            <a href="img/sandClock.jpg">
+              <img src="img/sandClock.jpg" alt="">
+              <p>May link to timer.</p></a>
+          </li> -->
+
+          <!-- Placeholder for future development -->
+          <!--       <li>
             <a href="img/numbers-12.jpg">
               <img src="img/numbers-12.jpg" alt="">
               <p>Placeholder</p></a>
-          </li>
+          </li> -->
         </ul>
       </section>
       <!-- Footer with social media icons and links to Code Louisville social media sites -->
       <footer>
-        <a href="https://twitter.com/codelouisville"></a><img src="img/twitter-wrap.png" alt="Twitter Logo" class="social-icon">
-        <a href="https://www.facebook.com/codelouisville/"></a><img src="img/facebook-wrap.png" alt="Facebook Logo" class="social-icon">
+        <a href="https://twitter.com/codelouisville"><img src="img/twitter-wrap.png" alt="Twitter Logo" class="social-icon"></a>
+
+        <a href="https://www.facebook.com/codelouisville/"><img src="img/facebook-wrap.png" alt="Facebook Logo" class="social-icon"></a>
+        
         <p>&copy; 2016 Jennifer Varahala.</p>
       </footer>
     </div> 
