Adding comments and styling changes

--- a/app/home-nav-page/about.html
+++ b/app/home-nav-page/about.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+<!-- Head with links to css stylesheets that allows for window and sizing responsivenss depending on devices used -->
   <head>
     <meta charset="utf-8">
     <title>Code Louisville | FSJS Syllabus</title>
@@ -7,8 +8,10 @@
     <link href='https://fonts.googleapis.com/css?family=Bad+Script|Lilita+One|Ovo' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/responsive.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
+
+<!-- Main body wih site navigation -->
   <body>
     <header>   
       <a href="index.html" id="logo">
@@ -24,6 +27,7 @@
       </nav>
     </header>
     <div id="wrapper">
+    <!-- Image & paragraph info -->
       <section>   
        <img src="img/jenv.jpg" alt="Photograph of Jennifer Varahala" class= "profile-photo"> 
        <h3>About</h3>
@@ -31,11 +35,13 @@
        </p>
         <p>If you'd like to follow CodeLouisville on Twitter, their username is <a href="https://twitter.com/codelouisville"> @codelouisville</a></p>
       </section>
+      <!-- Footer with social media links to Code Louisville -->
       <footer>
         <a href="https://twitter.com/codelouisville"><img src="img/twitter-wrap.png" alt="Twitter Logo" class="social-icon"                                                 ></a>
         <a href="https://www.facebook.com/codelouisville/"><img src="img/facebook-wrap.png" alt="Facebook Logo" class="social-icon"></a>
 
         <p>&copy; 2016 Jennifer Varahala.</p>
+        
       </footer>
     </div> 
   </body>
