--- a/app/home-nav-page/contact.html
+++ b/app/home-nav-page/contact.html
@@ -1,5 +1,6 @@
   <!DOCTYPE html>
 <html>
+<!-- Head with links to css stylesheets that allows for window and sizing responsivenss depending on devices used -->
   <head>
     <meta charset="utf-8">
     <title>Code Louisville | FSJS Syllabus</title>
@@ -7,8 +8,9 @@
     <link href='https://fonts.googleapis.com/css?family=Bad+Script|Lilita+One|Ovo' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/responsive.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
+  <!-- Main body wih site navigation -->
   <body>
     <header>   
       <a href="index.html" id="logo">
@@ -23,6 +25,7 @@
         </ul>
       </nav>
     </header>
+    <!-- Image & paragraph info -->
     <div id="wrapper">
       <section id="primary">   
         <h3> General Information</h3>
@@ -39,6 +42,7 @@
         <li class="twitter"><a href="http://twitter.com/intent/tweet?screen_name=jaavarahala">@jaavarahala</a></li>
       </ul>
       </section>
+       <!-- Footer with social media links to Code Louisville -->
       <footer>
         <a href="https://twitter.com/codelouisville"><img src="img/twitter-wrap.png" alt="Twitter Logo" class="social-icon"></a>
 
