--- a/app/home-nav-page/index.html
+++ b/app/home-nav-page/index.html
@@ -1,7 +1,7 @@
 <!-- Problem: html needed for simple to-do list web app -->
 <!DOCTYPE html>
 <html>
-  <!-- Header -->
+  <!-- Head with links to css stylesheets that allows for window and sizing responsivenss depending on devices used -->
   <head>
     <meta charset="utf-8">
     <title>Code Louisville | FSJS Syllabus</title>
@@ -10,9 +10,9 @@
     <link href='https://fonts.googleapis.com/css?family=Bad+Script|Lilita+One|Ovo' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/responsive.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
-  <!-- Body -->
+  <!-- Body --><!-- Main body wih site navigation -->
   <body>
     <header>   
       <a href="index.html" id="logo">
