--- a/app/todo-app/public/index.html
+++ b/app/todo-app/public/index.html
@@ -19,6 +19,8 @@
     <todo></todo>
    </div>
 
+<!-- Bundled code in vender and todo files -->
+
   <script src="/scripts/vendor.bundle.js"></script>
   <script src="/scripts/todo.bundle.js"></script>
 </body>
