--- a/app/home-nav-page/contact.html
+++ b/app/home-nav-page/contact.html
@@ -39,6 +39,7 @@
       <ul class="contact-info">
         <li class="phone"><a href="tel:555-6425">1-347-766-7586</a></li>
         <li class="mail"><a href="mailto:jvarahala@example.com">jvarahala@outlook.com</a></li>
+        <li class="linkedin"><a href="https://www.linkedin.com/in/jennifer-varahala-1bb17853">https://www.linkedin.com/in/jennifer-varahala-1bb17853/a></li>
         <li class="twitter"><a href="http://twitter.com/intent/tweet?screen_name=jaavarahala">@jaavarahala</a></li>
       </ul>
       </section>
